--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dependencies": {
       "express": "^4.18.2",
       "axios": "^1.3.0",
-      "dotenv": "^16.0.3"
-         "cors": "^2.8.5"
+      "dotenv": "^16.0.3",
+      "cors": "^2.8.5"
     }
-  }
+}
