--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "scripts": {
       "start": "node server.js"
     },
-    "dependencies": {
-      "express": "^4.18.2",
-      "axios": "^1.3.0",
-      "dotenv": "^16.0.3",
-      "cors": "^2.8.5"
+"dependencies": {
+  "express": "^4.18.2",
+  "axios": "^1.3.0",
+  "dotenv": "^16.0.3",
+  "node-fetch": "^3.3.0"
     }
 }
