--- a/package.json
+++ b/package.json
@@ -1,14 +1,29 @@
 {
     "name": "webhook-proxy",
     "version": "1.0.0",
+    "description": "A simple webhook proxy server",
     "main": "server.js",
     "scripts": {
-      "start": "node server.js"
+        "start": "node server.js",
+        "dev": "nodemon server.js",
+        "lint": "eslint .",
+        "test": "jest"
     },
-"dependencies": {
-  "express": "^4.18.2",
-  "axios": "^1.3.0",
-  "dotenv": "^16.0.3",
-  "node-fetch": "^3.3.0"
-    }
+    "dependencies": {
+        "express": "^4.18.2",
+        "axios": "^1.3.0",
+        "dotenv": "^16.0.3",
+        "cors": "^2.8.5",
+        "body-parser": "^1.20.2",
+        "morgan": "^1.10.0"
+    },
+    "devDependencies": {
+        "nodemon": "^3.0.1",
+        "eslint": "^8.55.0",
+        "jest": "^29.6.2"
+    },
+    "engines": {
+        "node": ">=16"
+    },
+    "license": "MIT"
 }
