--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
         "test": "jest"
     },
     "dependencies": {
-        "express": "^4.18.2",
         "axios": "^1.3.0",
-        "dotenv": "^16.0.3",
-        "cors": "^2.8.5",
         "body-parser": "^1.20.2",
-        "morgan": "^1.10.0"
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "morgan": "^1.10.0",
+        "node-fetch": "^3.3.2"
     },
     "devDependencies": {
-        "nodemon": "^3.0.1",
         "eslint": "^8.55.0",
-        "jest": "^29.6.2"
+        "jest": "^29.6.2",
+        "nodemon": "^3.0.1"
     },
     "engines": {
         "node": ">=16"
